Add syntax highlighting via highlight.js, also added a sentence to airline post on why I didn't use boxplot

--- a/themes/hugo-initio/layouts/partials/footer.html
+++ b/themes/hugo-initio/layouts/partials/footer.html
@@ -93,5 +93,7 @@
 <script src="{{ .Site.BaseURL }}js/template.js"></script>
 <script id="dsq-count-scr" src="//{{ .Site.Params.disqus.site }}/count.js" async></script>
 {{ partial "analyticstracking.html" . }}
+{{ partial "footer_highlightjs" . }}
+
 </body>
 </html>
