--- a/themes/hugo-initio/layouts/partials/footer_highlightjs.html
+++ b/themes/hugo-initio/layouts/partials/footer_highlightjs.html
@@ -10,3 +10,12 @@
 <script>hljs.configure({languages: []}); hljs.initHighlightingOnLoad();</script>
 {{ end }}
 {{ end }}
+
+
+{{ if and (not .Params.disable_mathjax) (or (in (string .Content) "\\") (in (string .Content) "$")) }}
+
+<script src="{{ "/js/math-code.js" | relURL }}"></script>
+
+<script async src="{{ .Site.Params.MathJaxCDN | default "//cdn.bootcss.com" }}/mathjax/{{ .Site.Params.MathJaxVersion | default "2.7.1" }}/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+
+{{ end }}
