--- a/themes/hugo-initio/layouts/partials/footer_highlightjs.html
+++ b/themes/hugo-initio/layouts/partials/footer_highlightjs.html
@@ -2,11 +2,11 @@
 {{ $highVer := .Site.Params.highlightjsVersion }}
 {{ $highCDN := (.Site.Params.highlightjsCDN | default "//cdn.bootcss.com") }}
 {{ if (not (eq $highVer "")) }}
-<script src="{{ $highCDN }}/highlight.js/{{ $highVer }}/highlight.min.js"></script>
+<script async src="{{ $highCDN }}/highlight.js/{{ $highVer }}/highlight.min.js"></script>
 {{ $.Scratch.Set "highLangs" .Site.Params.highlightjsLang }}
 {{ range .Params.highlightjsLang }}{{ $.Scratch.Add "highLangs" . }}{{ end }}
 {{ range ($.Scratch.Get "highLangs") }}
-<script src="{{ $highCDN }}/highlight.js/{{ $highVer }}/languages/{{ . }}.min.js"></script>{{ end }}
+<script async src="{{ $highCDN }}/highlight.js/{{ $highVer }}/languages/{{ . }}.min.js"></script>{{ end }}
 <script>hljs.configure({languages: []}); hljs.initHighlightingOnLoad();</script>
 {{ end }}
 {{ end }}
