--- a/themes/hugo-initio/layouts/partials/head_highlightjs.html
+++ b/themes/hugo-initio/layouts/partials/head_highlightjs.html
@@ -1,7 +1,7 @@
 <!--
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/default.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+<script async src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"></script>
+<script async>hljs.initHighlightingOnLoad();</script>
 -->
 {{ if (not .Params.disable_highlight) }}
 {{ $highTheme := .Site.Params.highlightjsTheme }}
