Add 1/7/2019 Tidy Tuesday post, also recompiled from a new computer

--- a/themes/hugo-initio/layouts/_default/single.html
+++ b/themes/hugo-initio/layouts/_default/single.html
@@ -39,9 +39,9 @@
 			<div class="col-sm-8 col-sm-offset-2">
 
 				<div id="comments">
-                    <!--{{ if .Params.Comments }}-->
+                    {{ if .Params.Comments }}
                        {{ partial "disqus.html" . }}
-                    <!--{{ end }}-->
+                    {{ end }}
 				</div>
 			</div>
 		</div> <!-- /row comments -->
